WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281448
[Navigation] Fix ordering-and-transition/navigate-double-intercept.html
https://bugs.webkit.org/show_bug.cgi?id=281448
Summary
[Navigation] Fix ordering-and-transition/navigate-double-intercept.html
Rob Buis
Reported
2024-10-14 13:15:37 PDT
Fix ordering-and-transition/navigate-double-intercept.html.
Attachments
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2024-10-14 13:21:04 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35166
EWS
Comment 2
2024-10-16 01:42:49 PDT
Committed
285251@main
(7f408371ac63): <
https://commits.webkit.org/285251@main
> Reviewed commits have been landed. Closing PR #35166 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-10-16 01:43:15 PDT
<
rdar://problem/138022907
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug