[Navigation] Fix ordering-and-transition/navigate-double-intercept.html https://bugs.webkit.org/show_bug.cgi?id=281448

Reviewed by Alex Christensen.

The ordering-and-transition/navigate-double-intercept.html test uses resources/helpers.js which verifies that transition.finished and AbortSignal
uses the same JS exception object, so adapt the code to do that.

This PR also unskips some tests that cause no problems anymore on mac-wk2-stress.

* LayoutTests/imported/w3c/web-platform-tests/navigation-api/ordering-and-transition/navigate-double-intercept_currententrychange-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/navigation-api/ordering-and-transition/navigate-double-intercept_no-currententrychange-expected.txt:
* Source/WebCore/page/Navigation.cpp:
(WebCore::Navigation::abortOngoingNavigation):
(WebCore::Navigation::innerDispatchNavigateEvent):
* Source/WebCore/page/NavigationTransition.cpp:
(WebCore::NavigationTransition::rejectPromise):
* Source/WebCore/page/NavigationTransition.h:

Canonical link: https://commits.webkit.org/285251@main